--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+          <body style="background-color:grey;"> <h1>Products</h1> <p>We have developed more than 10 products till now.</p> </body> </html>
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
